--- a/desafio-14/package.json
+++ b/desafio-14/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "flash": "^1.1.0",
     "fork": "^1.3.1",
     "knex": "^2.4.2",
     "minimist": "^1.2.7",
